// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLIGuide renders the contents when open 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fxRgDK"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 lixbyN"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bPoCLd CLIGuide__StyledAccordion-sc-1q6mc5x-0 czGaBT"
      role="tablist"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hFkNOm"
      >
        <button
          aria-expanded="true"
          aria-selected="true"
          class="StyledButtonKind-sc-1vhfpnt-0 bICtWz"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 dsfsDz"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 kKfTPQ"
            >
              <span
                aria-hidden="true"
                class="StyledText-sc-1sadyjn-0 gNWhMe fa fa-shell"
                role="presentation"
              />
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 bnQbNj"
              />
              <span
                class="StyledText-sc-1sadyjn-0 hLeSgE"
              >
                Get something from somewhere
              </span>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 xKDIh"
            >
              <svg
                aria-label="FormUp"
                class="StyledIcon-sc-ofa7kd-0 bwOwIm"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 15-6-6-6 6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
        <div
          class="StyledBox-sc-13pk1d4-0 iNDmPr"
          style=""
        >
          <div
            aria-hidden="false"
            class="StyledBox-sc-13pk1d4-0 iNDmPr Collapsible__AnimatedBox-sc-15kniua-0 fBjAck"
            open=""
            style="max-height: 0;"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 cgWQwu"
            >
              Just some content
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CLIGuide renders without crashing 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fxRgDK"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 lixbyN"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bPoCLd CLIGuide__StyledAccordion-sc-1q6mc5x-0 czGaBT"
      role="tablist"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hFkNOm"
      >
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButtonKind-sc-1vhfpnt-0 bICtWz"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 dsfsDz"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 kKfTPQ"
            >
              <span
                aria-hidden="true"
                class="StyledText-sc-1sadyjn-0 gNWhMe fa fa-shell"
                role="presentation"
              />
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 bnQbNj"
              />
              <span
                class="StyledText-sc-1sadyjn-0 hLeSgE"
              >
                Get something from somewhere
              </span>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 xKDIh"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-sc-ofa7kd-0 bwOwIm"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 9-6 6-6-6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
        <div
          class="StyledBox-sc-13pk1d4-0 iNDmPr"
        >
          <div
            aria-hidden="true"
            class="StyledBox-sc-13pk1d4-0 iNDmPr Collapsible__AnimatedBox-sc-15kniua-0 cxsREl"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
